# kvstore

./: kalzurest.cabal  kvstore.cabal
app/: Main.hs
src/: Lib.hs
src/Network/: Envelope.hs  Event.hs
src/Network/Distributed/: Server.hs
