name:                kvstore
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/kvstore#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Network.Distributed.Server
                     , Network.Event
                     , Network.Envelope
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , servant-docs
                     , wai
                     , warp
                     , sqlite-simple
                     , text
                     , mtl
                     , bytestring
                     , http-types
                     , pipes
                     , pipes-network
                     , binary
                     , network
                     , stm
                     , transformers
  default-language:    Haskell2010

executable kvstore-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kvstore
                     , sqlite-simple
                     , stm
                     , mtl
  default-language:    Haskell2010

test-suite kvstore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kvstore
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kvstore
